Changed layout and fixed scrollbar bug

--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,46 @@
+/* App.css */
 .App {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
   background-color: #121212;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
 }
 
 .main-content {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
-  width: 80vw;
+  align-items: center;
+  width: 95vw;
   height: 80vh;
+}
+
+.large-wrapper {
+  width: 65%;
+  height: 100%;
+  background: #1e1e1e;
+  color: white;
+  margin: 40px 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+.video-player-wrapper {
+  width: 70%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
 }
 
 .transcript-wrapper {
   border-radius: 10px;
-  overflow: hidden;  /* Hide overflow to maintain rounded corners */
-  flex-grow: 1;  /* Allow the transcript to take up remaining space */
-  max-height: 1920px;  /* Match the height of the video player */
+  flex-grow: 1;
+  margin: 20px;
+  width: 30%;
+  height: 100%;
+  overflow: auto;
 }
