--- a/src/components/Word.css
+++ b/src/components/Word.css
@@ -6,9 +6,9 @@
     }
 
 .word.highlight {
-    background-color: rgba(255, 255, 0, 0.5);
+    background-color: rgba(15, 78, 119, 0.6);
 }
 
 .word.clicked {
-    background-color: rgba(255, 255, 0, 1);
+    background-color: rgb(16, 82, 126);
 }
