--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,3 @@ body {
   padding: 0;
 }
 
-.word.highlight {
-  background-color: yellow;
-}
